log
Thu 04 May 2023 04:24:42 PM UTC: 
 tests:  0|5
total_score: 0/70
b173ece
Thu 04 May 2023 04:35:58 PM UTC: 
 sudoku.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:61:26: error: right-hand operand of comma expression has no effect [-Werror=unused-value]
   61 |               for(num = 1, num<= 9 ; num++)
      |                          ^
sudoku.c:61:43: error: expected ‘;’ before ‘)’ token
   61 |               for(num = 1, num<= 9 ; num++)
      |                                           ^
      |                                           ;
cc1: all warnings being treated as errors
Compilation failed
2a560dd
Thu 04 May 2023 04:36:17 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
3cabe6a
Thu 04 May 2023 05:28:13 PM UTC: 
 sudoku.c | 45 +++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 45 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:57:9: error: suggest explicit braces to avoid ambiguous ‘else’ [-Werror=dangling-else]
   57 |       if(num !=0)
      |         ^
sudoku.c:66:9: error: suggest explicit braces to avoid ambiguous ‘else’ [-Werror=dangling-else]
   66 |       if(numColumna !=0)
      |         ^
sudoku.c:53:9: error: unused variable ‘columnas’ [-Werror=unused-variable]
   53 |     int columnas[10]={0,0,0,0,0,0,0,0,0};
      |         ^~~~~~~~
sudoku.c:94:1: error: control reaches end of non-void function [-Werror=return-type]
   94 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1307830
Thu 04 May 2023 05:28:59 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:57:9: error: suggest explicit braces to avoid ambiguous ‘else’ [-Werror=dangling-else]
   57 |       if(num !=0)
      |         ^
sudoku.c:66:9: error: suggest explicit braces to avoid ambiguous ‘else’ [-Werror=dangling-else]
   66 |       if(numColumna !=0)
      |         ^
sudoku.c:94:1: error: control reaches end of non-void function [-Werror=return-type]
   94 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
a1615fd
Thu 04 May 2023 05:30:01 PM UTC: 
 sudoku.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:97:1: error: control reaches end of non-void function [-Werror=return-type]
   97 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
bdaa3ad
Thu 04 May 2023 05:30:16 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:97:1: error: control reaches end of non-void function [-Werror=return-type]
   97 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
4219433
Thu 04 May 2023 05:30:36 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
sudoku.c:97:1: error: expected identifier or ‘(’ before ‘}’ token
   97 | }
      | ^
Compilation failed
2e279bc
Thu 04 May 2023 05:30:48 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
233a400
Fri 05 May 2023 11:26:12 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:53:9: error: unused variable ‘columnas’ [-Werror=unused-variable]
   53 |     int columnas[10]={0,0,0,0,0,0,0,0,0};
      |         ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6730e9c
Fri 05 May 2023 11:26:37 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
5fda1ee
Sat 06 May 2023 01:42:22 PM UTC: 
 sudoku.c | 23 +++++++++++++++++++++--
 1 file changed, 21 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:78:29: error: ‘p’ undeclared (first use in this function)
   78 |       int fila = 3*(k/3) + (p/3);
      |                             ^
sudoku.c:78:29: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:80:30: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
   80 |       numSubMa = n->sudo[fila, colum];
      |                              ^
sudoku.c:80:16: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   80 |       numSubMa = n->sudo[fila, colum];
      |                ^
cc1: all warnings being treated as errors
Compilation failed
8a7d486
Sat 06 May 2023 01:42:42 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:78:29: error: ‘p’ undeclared (first use in this function)
   78 |       int fila = 3*(k/3) + (p/3);
      |                             ^
sudoku.c:78:29: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
86df904
Sat 06 May 2023 01:43:07 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
31eb56a
Sat 06 May 2023 01:43:29 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:49:7: error: unused variable ‘k’ [-Werror=unused-variable]
   49 |   int k=0;
      |       ^
sudoku.c:48:27: error: unused variable ‘numSubMa’ [-Werror=unused-variable]
   48 |   int i,j,numColumna,num, numSubMa;
      |                           ^~~~~~~~
sudoku.c: At top level:
sudoku.c:99:3: error: expected identifier or ‘(’ before ‘return’
   99 |   return 1;
      |   ^~~~~~
sudoku.c:100:1: error: expected identifier or ‘(’ before ‘}’ token
  100 | }
      | ^
sudoku.c: In function ‘is_valid’:
sudoku.c:98:3: error: control reaches end of non-void function [-Werror=return-type]
   98 |   }
      |   ^
cc1: all warnings being treated as errors
Compilation failed
9505c95
Sat 06 May 2023 01:43:50 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c:99:3: error: expected identifier or ‘(’ before ‘return’
   99 |   return 1;
      |   ^~~~~~
sudoku.c:100:1: error: expected identifier or ‘(’ before ‘}’ token
  100 | }
      | ^
sudoku.c: In function ‘is_valid’:
sudoku.c:98:3: error: control reaches end of non-void function [-Werror=return-type]
   98 |   }
      |   ^
cc1: all warnings being treated as errors
Compilation failed
5fb2e0d
Sat 06 May 2023 01:44:24 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
04dcc49
Sat 06 May 2023 01:56:23 PM UTC: 
 sudoku.c | 11 +++++------
 1 file changed, 5 insertions(+), 6 deletions(-)
 tests:  2|4
total_score: 15/70
df69695
Sat 06 May 2023 01:58:02 PM UTC: 
 sudoku.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  5|3
total_score: 35/70
73491d1
Sat 06 May 2023 02:01:11 PM UTC: 
 sudoku.c | 20 ++------------------
 1 file changed, 2 insertions(+), 18 deletions(-)
 tests:  6|2
total_score: 45/70
2f9b65b
Sat 06 May 2023 02:03:15 PM UTC: 
 sudoku.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
f6be00b
Sat 06 May 2023 02:33:36 PM UTC: 
 sudoku.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
 tests:  0|0
480107d
